src/ovraudio/sys.rs

extern "C" {
    /// Render a speaker feed from ambisonics
///
/// \param InAmbisonics[in] Interleaved ambisonic audio buffer to render (4 channels for 1st order, 9 channels for second order)
/// \param DirectionX[in] X component of the direction vector
/// \param DirectionY[in] Y component of the direction vector
/// \param DirectionZ[in] Z component of the direction vector
/// \param Format[in] ambisonic format (AmbiX or FuMa)
/// \param AmbisonicOrder[in] order of ambisonics (1 or 2)
/// \param OutSpeakerFeed[out] Buffer to write speaker feed to 
/// \param NumSamples[in] Length of the buffer in frames (OutSpeakerFeed is this length, InAmbisonics is either 4 or 9 times this length depending on 1st or 2nd order)
///
    pub fn ovrAudio_RenderAmbisonicSpeakerFeed(InAmbisonics: *const f32,
                                               DirectionX: f32,
                                               DirectionY: f32,
                                               DirectionZ: f32,
                                               Format:
                                                   ovrAudioAmbisonicFormat,
                                               AmbisonicOrder:
                                                   ::std::os::raw::c_int,
                                               SpeakerFeed: *mut f32,
                                               NumSamples:
                                                   ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Spatialize ambisonic stream
///
/// \param Src[in] pointer to 4 channel interleaved B-format floating point buffer to spatialize
/// \param Dst[out] pointer to stereo interleaved floating point destination buffer
///
    pub fn ovrAudio_ProcessAmbisonicStreamInterleaved(Context:
                                                          ovrAudioContext,
                                                      AmbisonicStream:
                                                          ovrAudioAmbisonicStream,
                                                      Src: *const f32,
                                                      Dst: *mut f32,
                                                      NumSamples:
                                                          ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Set orientation for ambisonic stream
///
/// \param LookDirectionX[in] X component of the source direction vector
/// \param LookDirectionY[in] Y component of the source direction vector
/// \param LookDirectionZ[in] Z component of the source direction vector
/// \param UpDirectionX[in] X component of the source up vector
/// \param UpDirectionY[in] Y component of the source up vector
/// \param UpDirectionZ[in] Z component of the source up vector
///
    pub fn ovrAudio_SetAmbisonicOrientation(AmbisonicStream:
                                                ovrAudioAmbisonicStream,
                                            LookDirectionX: f32,
                                            LookDirectionY: f32,
                                            LookDirectionZ: f32,
                                            UpDirectionX: f32,
                                            UpDirectionY: f32,
                                            UpDirectionZ: f32) -> ovrResult;
}
extern "C" {
    /// Get orientation for ambisonic stream
///
/// \param pLookDirectionX[in] address of the X component of the source direction vector
/// \param pLookDirectionY[in] address of the Y component of the source direction vector
/// \param pLookDirectionZ[in] address of the Z component of the source direction vector
/// \param pUpDirectionX[in] address of the X component of the source up vector
/// \param pUpDirectionY[in] address of the Y component of the source up vector
/// \param pUpDirectionZ[in] address of the Z component of the source up vector
///
    pub fn ovrAudio_GetAmbisonicOrientation(AmbisonicStream:
                                                ovrAudioAmbisonicStream,
                                            pLookDirectionX: *mut f32,
                                            pLookDirectionY: *mut f32,
                                            pLookDirectionZ: *mut f32,
                                            pUpDirectionX: *mut f32,
                                            pUpDirectionY: *mut f32,
                                            pUpDirectionZ: *mut f32)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_SetProfilerEnabled(Context: ovrAudioContext,
                                       Enabled: ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_SetProfilerPort(arg1: ovrAudioContext,
                                    Port: ::std::os::raw::c_int) -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_CreateSpectrumAnalyzer(ChannelCount:
                                               ::std::os::raw::c_int,
                                           WindowLength:
                                               ::std::os::raw::c_int,
                                           Overlap: ::std::os::raw::c_int,
                                           pSpectrumAnalyzer:
                                               *mut ovrAudioSpectrumAnalyzer)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_DestroySpectrumAnalyzer(SpectrumAnalyzer:
                                                ovrAudioSpectrumAnalyzer)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_ResetSpectrumAnalyzer(SpectrumAnalyzer:
                                              ovrAudioSpectrumAnalyzer)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_SpectrumAnalyzerProcessBufferInterleaved(SpectrumAnalyzer:
                                                                 ovrAudioSpectrumAnalyzer,
                                                             Buffer:
                                                                 *const f32,
                                                             LengthFrames:
                                                                 ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_SpectrumAnalyzerGetSpectrumInterleaved(SpectrumAnalyzer:
                                                               ovrAudioSpectrumAnalyzer,
                                                           Spectrum: *mut f32)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_SpectrumAnalyzerCalculateAmbisonicCoefficients(SpectrumAnalyzer:
                                                                       ovrAudioSpectrumAnalyzer,
                                                                   DirectionX:
                                                                       f32,
                                                                   DirectionY:
                                                                       f32,
                                                                   DirectionZ:
                                                                       f32,
                                                                   Coefs:
                                                                       *mut f32)
     -> ovrResult;
}
extern "C" {
    pub fn ovrAudio_SpectrumAnalyzerGetSpectrumAmbisonic(SpectrumAnalyzer:
                                                             ovrAudioSpectrumAnalyzer,
                                                         Coefs: *const f32,
                                                         Spectrum: *mut f32)
     -> ovrResult;
}
extern "C" {
    /// Set the number of ray casts per second are used for dynamic modeling, more rays mean more accurate and responsive modelling but will reduce performance
///
/// \param Context[in] context to use
/// \param RaysPerSecond[in] number of ray casts per second, default = 256
///
    pub fn ovrAudio_SetDynamicRoomRaysPerSecond(Context: ovrAudioContext,
                                                RaysPerSecond:
                                                    ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Set the speed which the dynamic room interpolates, higher values will update more quickly but less smooth
///
/// \param Context[in] context to use
/// \param InterpSpeed[in] speed which it interpolates (0.0 - 1.0) default = 0.9
///
    pub fn ovrAudio_SetDynamicRoomInterpSpeed(Context: ovrAudioContext,
                                              InterpSpeed: f32) -> ovrResult;
}
extern "C" {
    /// Set the maximum distance to the wall for dynamic room modeling to constrain the size
///
/// \param Context[in] context to use
/// \param MaxWallDistance[in] distance to wall in meters, default = 50
///
    pub fn ovrAudio_SetDynamicRoomMaxWallDistance(Context: ovrAudioContext,
                                                  MaxWallDistance: f32)
     -> ovrResult;
}
extern "C" {
    /// Set the size of the cache which holds a history of the rays cast, a larger value will have more points making it more stable but less responsive
///
/// \param Context[in] context to use
/// \param RayCacheSize[in] number of rays to cache, default = 512
///
    pub fn ovrAudio_SetDynamicRoomRaysRayCacheSize(Context: ovrAudioContext,
                                                   RayCacheSize:
                                                       ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Update the dynamic room modeling, this will fire the ray cast calback and update the size of the room
///
/// \param Context[in] context to use
///
    pub fn ovrAudio_UpdateRoomModel(Context: ovrAudioContext, WetLevel: f32)
     -> ovrResult;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(::std::mem::size_of::<__va_list_tag>() , 24usize , concat ! (
               "Size of: " , stringify ! ( __va_list_tag ) ));
    assert_eq! (::std::mem::align_of::<__va_list_tag>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( __va_list_tag ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . gp_offset as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( gp_offset ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . fp_offset as * const
                _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( fp_offset ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . overflow_arg_area as
                * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( overflow_arg_area ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . reg_save_area as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( reg_save_area ) ));
}
impl Clone for __va_list_tag {
    fn clone(&self) -> Self { *self }
}
